# Go_Go_ZabGU_Tasks

./: CMakeLists.txt
11b/: main.c
137b/: list_mdl.c  list_mdl.h  main.c
197/: main.c
264/: main.c
334b/: main.c
434/: array_util.c  array_util.h  main.c
473a/: even_counter.c  even_counter.h  input.txt  main.c
527/: file_compare.c  file_compare.h  g.txt  main.c
538b/: list.c  list.h  main.c
60b/: main.c
687/: main.c  matrix_lv_0.c  matrix_lv_0.h
705/: main.c  matrix.c  matrix.h
70d/: main.c
77d/: main.c
